--- a/Demoman/.classpath
+++ b/Demoman/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Demoman/Libraries/native/windows"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="Libraries/NitroNet.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
