--- a/Demoman/.classpath
+++ b/Demoman/.classpath
@@ -13,5 +13,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="Libraries/NitroNet.jar"/>
+	<classpathentry kind="lib" path="Libraries/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
